--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,90 @@
     android:layout_height="match_parent"
     tools:context="com.inception.twitter_test.MainActivity">
 
-    <com.twitter.sdk.android.core.identity.TwitterLoginButton
-        android:id="@+id/login_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@color/colorPrimary"
+        android:id="@+id/action_bar">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TWITTER"
+            android:layout_centerVertical="true"
+            android:textColor="#fff"
+            android:textStyle="bold"
+            android:layout_marginLeft="15dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="LOG OUT"
+            android:textColor="#fff"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="15dp"
+            android:onClick="log_out_twitter"
+            />
+
+
+    </RelativeLayout>
+
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:weightSum="3"
+       android:id="@+id/top_bar"
+       android:layout_below="@+id/action_bar"
+       android:background="@color/colorPrimary"
+       >
+
+       <TextView
+           android:layout_width="0dp"
+           android:layout_height="wrap_content"
+           android:layout_weight="1"
+           android:text="TIMELINE"
+           android:gravity="center"
+           android:padding="10dp"
+           android:onClick="open_timeline"
+           android:textColor="#fff"
+           android:textStyle="bold"
+           />
+
+       <TextView
+           android:layout_width="0dp"
+           android:layout_height="wrap_content"
+           android:layout_weight="1"
+           android:text="SEARCH"
+           android:gravity="center"
+           android:padding="10dp"
+           android:onClick="search_timeline"
+           android:textStyle="bold"
+           android:textColor="@color/tw__composer_light_gray"
+           />
+
+       <TextView
+           android:layout_width="0dp"
+           android:layout_height="wrap_content"
+           android:layout_weight="1"
+           android:text="POST"
+           android:gravity="center"
+           android:padding="10dp"
+           android:onClick="post_timeline"
+           android:textStyle="bold"
+           android:textColor="@color/tw__composer_light_gray"
+
+           />
+
+
+   </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/main_frame"
+        android:layout_below="@+id/top_bar">
+
+    </FrameLayout>
 
 </RelativeLayout>
